--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ src="https://www.facebook.com/tr?id=1974387693117771&ev=PageView&noscript=1"
 
     <script>
         // Telegram link
-        const TELEGRAM_LINK = "https://t.me/+9qQAX44UaAIzMjFl";
+        const TELEGRAM_LINK = "https://t.me/+Bn59fO-K2i4yYTY1";
         // Countdown + auto redirect
         let timeLeft = 15;
         const countdownEl = document.getElementById('countdown');
@@ -227,4 +227,5 @@ src="https://www.facebook.com/tr?id=1974387693117771&ev=PageView&noscript=1"
 
 
 </html>
+
 
